versions/v0.3.0/_sources/autoapi/autointent/modules/scoring/MLKnnScorer.rst.txt
autointent.modules.scoring.MLKnnScorer
======================================

.. py:class:: autointent.modules.scoring.MLKnnScorer(k = 5, embedder_config = None, s = 1.0, ignore_first_neighbours = 0, vector_index_config = None)

   Bases: :py:obj:`autointent.modules.base.BaseScorer`


   Multi-label k-nearest neighbors (ML-KNN) scorer.

   This module implements ML-KNN, a multi-label classifier that computes probabilities
   based on the k-nearest neighbors of a query instance.

   :param k: Number of nearest neighbors to consider
   :param embedder_config: Config of the embedder used for vectorization
   :param s: Smoothing parameter for probability calculations, defaults to 1.0
   :param ignore_first_neighbours: Number of closest neighbors to ignore, defaults to 0

   Example:
   --------

   .. testcode::

       from autointent.modules.scoring import MLKnnScorer
       utterances = ["what is your name?", "how are you?"]
       labels = [[1,0], [0,1]]
       scorer = MLKnnScorer(
           k=5,
           embedder_config="sergeyzh/rubert-tiny-turbo",
       )
       scorer.fit(utterances, labels)
       test_utterances = ["Hi!", "What's up?"]
       probabilities = scorer.predict(test_utterances)
       print(probabilities)  # Outputs predicted probabilities for each label

   .. testoutput::

       [[0.5 0.5]
        [0.5 0.5]]



   .. py:attribute:: name
      :value: 'mlknn'


      Name of the module to reference in search space configuration.


   .. py:attribute:: supports_multiclass
      :value: False


      Whether the module supports multiclass classification


   .. py:attribute:: supports_multilabel
      :value: True


      Whether the module supports multilabel classification


   .. py:attribute:: k
      :value: 5



   .. py:attribute:: embedder_config


   .. py:attribute:: s
      :value: 1.0



   .. py:attribute:: ignore_first_neighbours
      :value: 0



   .. py:attribute:: vector_index_config


   .. py:method:: from_context(context, k = 5, s = 1.0, ignore_first_neighbours = 0, embedder_config = None)
      :classmethod:


      Create an MLKnnScorer instance using a Context object.

      :param context: Context containing configurations and utilities
      :param k: Number of nearest neighbors to consider
      :param s: Smoothing parameter for probability calculations, defaults to 1.0
      :param ignore_first_neighbours: Number of closest neighbors to ignore, defaults to 0
      :param embedder_config: Config of the embedder, or None to use the best embedder

      :returns: Initialized MLKnnScorer instance



   .. py:method:: get_implicit_initialization_params()

      Return default params used in ``__init__`` method.

      Some parameters of the module may be inferred using context rather from ``__init__`` method.
      But they need to be logged for reproducibility during loading from disk.

      :returns: Dictionary of default params



   .. py:method:: fit(utterances, labels)

      Fit the scorer by training or loading the vector index and calculating probabilities.

      :param utterances: List of training utterances
      :param labels: List of multi-label targets for each utterance

      :raises TypeError: If the labels are not multi-label
      :raises ValueError: If the vector index mismatches the provided utterances



   .. py:method:: predict_labels(utterances, thresh = 0.5)

      Predict labels for the given utterances.

      :param utterances: List of query utterances
      :param thresh: Threshold for binary classification, defaults to 0.5

      :returns: Predicted labels as a binary array



   .. py:method:: predict(utterances)

      Predict probabilities for the given utterances.

      :param utterances: List of query utterances

      :returns: Array of predicted probabilities for each class



   .. py:method:: predict_with_metadata(utterances)

      Predict probabilities along with metadata for the given utterances.

      :param utterances: List of query utterances

      :returns:     - Array of predicted probabilities
                    - List of metadata with neighbor information
      :rtype: Tuple containing



   .. py:method:: clear_cache()

      Clear cached data in memory used by the vector index.


